add employee implementado

--- a/TP_Laboratorio_2/SystemEmployee/SystemEmployee.cbp
+++ b/TP_Laboratorio_2/SystemEmployee/SystemEmployee.cbp
@@ -35,6 +35,14 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="ArrayEmployees.h" />
+		<Unit filename="GetElements.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="GetElements.h" />
+		<Unit filename="Validation.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="Validation.h" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
